updates missing row on type page (#64)
* updates missing row on type page

* updates mixin to have default value for type size

--- a/source/_patterns/templates/typography/typography.hbs
+++ b/source/_patterns/templates/typography/typography.hbs
@@ -1,8 +1,7 @@
 <div class="container-fluid">
-
       <div class="row">
         <div class="col-md-12">
-          <div class="pf-vertical-rhythm">
+           <div class="pf-vertical-rhythm">
             <h3>PatternFly Typography</h3>
 
             <p>Patternfly uses Overpass, an open-licensed alternative to Interstate that is specifically for use on-screen and in our software. Like Interstate, Overpass is based on the FHWA (Federal Highway Administration) series of fonts, which has been used for US Highway signage since 1945. <a href="#">Download Overpass »</a></p>
@@ -64,8 +63,7 @@
             <p>The following snippet of text is <strong>rendered as bold text.</strong></p>
             <p>The following snippet of text is <em>rendered as italicized text.</em></p>
             <p>The following snippet of text is <a href="#">rendered as link text.</a></p>
-          </div>
-
+          <div class="row">
           <div class="col-md-4">
             <h4>Unordered List</h4>
             <ul>
@@ -109,7 +107,8 @@
               <li>Aenean sit</li>
             </ul>
         </div>
-
+      </div>
       </div>
     </div>
+  </div>
 </div>
