--- a/source/_patterns/templates/typography/vertical-rhythm.hbs
+++ b/source/_patterns/templates/typography/vertical-rhythm.hbs
@@ -1,34 +1,34 @@
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <section class="pf-vertical-rhythm">
-          <h1>Vertical Rhythm</h1>
-          <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.pf-vertical-rhythm</code> and all typeography level tags will receive a margin. All headings will also be given the appropriate size and weight.</p>
-          <h1>Heading 1</h1>
-          <h2>Heading 2</h2>
-          <h3>Heading 3</h3>
-          <h4>Heading 4</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia.</p>
-          <ul>
-            <li>Unordered list item</li>
-            <li>Unordered list item</li>
-            <li>Unordered list item</li>
-          </ul>
-          <ol>
-            <li>ordered list item</li>
-            <li>ordered list item</li>
-            <li>ordered list item</li>
-          </ol>
-          <dl>
-            <dt>Description list item</dt>
-            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
-            <dt>Description list item</dt>
-            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
-            <dt>Description list item</dt>
-            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
-          </dl>
-        </section>
+  <div class="row">
+    <div class="col-md-12">
+      <section class="pf-vertical-rhythm">
+        <h1>Vertical Rhythm</h1>
+        <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.pf-vertical-rhythm</code> and all typeography level tags will receive a margin. All headings will also be given the appropriate size and weight. <strong>Be aware that mixing components and vertical rhythm could create unwanted margins and heading styles.</strong></p>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia.</p>
+        <ul>
+          <li>Unordered list item</li>
+          <li>Unordered list item</li>
+          <li>Unordered list item</li>
+        </ul>
+        <ol>
+          <li>ordered list item</li>
+          <li>ordered list item</li>
+          <li>ordered list item</li>
+        </ol>
+        <dl>
+          <dt>Description list item</dt>
+          <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
+          <dt>Description list item</dt>
+          <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
+          <dt>Description list item</dt>
+          <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus earum debitis, ducimus dolor voluptate numquam eos explicabo corrupti inventore dolorum dicta, fugit itaque. Dicta ad qui, blanditiis quia vel dignissimos.</dd>
+        </dl>
+      </section>
+    </div>
   </div>
-</div>
 </div>
