--- a/source/_patterns/components/secondary-navigation/secondary-nav.hbs
+++ b/source/_patterns/components/secondary-navigation/secondary-nav.hbs
@@ -1,6 +1,6 @@
   <ul class="pf-secondary-nav" role="tablist">
     <li class="pf-secondary-nav__item">
-      <a href="#" role="tab" class="pf-secondary-nav__link" aria-selected="true">Secondary Tab One</a>
+      <a href="#" role="tab" class="pf-secondary-nav__link is-active" aria-selected="true">Secondary Tab One</a>
     </li>
     <li class="pf-secondary-nav__item">
       <a href="#" role="tab" class="pf-secondary-nav__link">Secondary Tab Two</a>
@@ -9,7 +9,7 @@
       <a href="#" role="tab" class="pf-secondary-nav__link">Secondary Tab Three</a>
     </li>
     <li class="pf-secondary-nav__item">
-      <a href="#" role="tab" class="pf-secondary-nav__link" aria-disabled="true">Secondary Tab Disabled</a>
+      <a href="#" role="tab" class="pf-secondary-nav__link is-disabled" aria-disabled="true">Secondary Tab Disabled</a>
     </li>
     <li class="pf-secondary-nav__item">
       <a href="#" role="tab" class="pf-secondary-nav__link">Secondary Tab Five</a>
