--- a/source/_patterns/components/badges/badge-styles.hbs
+++ b/source/_patterns/components/badges/badge-styles.hbs
@@ -1,9 +1,9 @@
-<h1>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h1>
-<h2>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h2>
-<h3>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h3>
-<h4>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h4>
-<h5>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h5>
-<h6>Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h6>
+<h1 class="h1">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h1>
+<h2 class="h2">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h2>
+<h3 class="h3">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h3>
+<h4 class="h4">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h4>
+<h5 class="h5">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h5>
+<h6 class="h6">Example heading {{> components-badge badgeText="default" badgeClass="badge-default" }}</h6>
 
 {{> components-badge badgeText="primary" badgeClass="badge-primary" }}
 {{> components-badge badgeText="success" badgeClass="badge-success" }}
