--- a/source/_patterns/templates/basic-template.hbs
+++ b/source/_patterns/templates/basic-template.hbs
@@ -1,5 +1,6 @@
 <div class="container-fluid">
-  <h1>Basic Page Title</h1>
+
+  <h1 class="h1">Basic Page Title</h1>
   <p>This is a basic template with some of the elements that are avaliable on PatternFly 5 CSS</p>
 
   <nav role="navigation">
@@ -16,7 +17,7 @@
     </div>
 
     <div class="col-md-8">
-
+  <div class="pf-vertical-rhythm">
       <h3>Application Heading 3</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -76,7 +77,7 @@
         </div>
       </div>
     </div>
-
+</div>
   </div>
 
 </div>
