adds vertical nav

--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -78,6 +78,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/close";
 @import "pf-view-selector";
 @import "pf-masthead";
+@import "pf-vertical-nav";
 @import "pf-shame";
 
 // Components w/ JavaScript
