removes margins from headings

--- a/source/_patterns/basics/typography/headings.hbs
+++ b/source/_patterns/basics/typography/headings.hbs
@@ -1,4 +1,4 @@
-<h1>Heading Level 1</h1>
-<h2>Heading Level 2</h2>
-<h3>Heading Level 3 <small class="text-muted">With faded secondary text</small></h3>
-<h4>Heading Level 4</h4>
+<h1 class="h1 mb-pf-md">Heading Level 1</h1>
+<h2 class="h2 mb-pf-md">Heading Level 2</h2>
+<h3 class="h3 mb-pf-md">Heading Level 3 <small class="text-muted">With faded secondary text</small></h3>
+<h4 class="h4 mb-pf-md">Heading Level 4</h4>
