--- a/source/_patterns/templates/basic-template.hbs
+++ b/source/_patterns/templates/basic-template.hbs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-  <h1 class="h1">Basic Page Title</h1>
+  <h1 class="h1 mb-pf-md my-pf-lg">Basic Page Title</h1>
   <p>This is a basic template with some of the elements that are avaliable on PatternFly 5 CSS</p>
 
   <nav role="navigation">
