--- a/source/_patterns/utilities/typography/vertical-rhythm.hbs
+++ b/source/_patterns/utilities/typography/vertical-rhythm.hbs
@@ -4,10 +4,10 @@
       <section class="pf-vertical-rhythm">
         <h1>Vertical Rhythm</h1>
         <p>At the component level all vertical rhythm is removed. In cases where you have a section where you want to implement vertical rhythm apply the <code>.pf-vertical-rhythm</code> and all typeography level tags will receive a margin. All headings will also be given the appropriate size and weight. <strong>Be aware that mixing components and vertical rhythm could create unwanted margins and heading styles.</strong></p>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <h4>Heading 4</h4>
+        <h1>Heading level 1</h1>
+        <h2>Heading level 2</h2>
+        <h3>Heading level 3</h3>
+        <h4>Heading level 4</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia, earum laborum saepe ipsa eius officiis aspernatur, reiciendis ab! Ab aliquam praesentium tempora, quidem, soluta eius.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id ipsam fugit, eos rem, officia.</p>
         <ul>
