--- a/source/scss/_pf-type.scss
+++ b/source/scss/_pf-type.scss
@@ -51,22 +51,34 @@ h4 {
   @include pf-heading-styles($weight: $pf-font-weight-semi-bold);
 }
 
-.h1,
+.h1 {
+  @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h1);
+}
+
+.h2 {
+  @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h2);
+}
+
+.h3 {
+  @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h3);
+}
+
+.h4 {
+  @include pf-heading-styles($weight: $pf-font-weight-semi-bold, $size: $font-size-h4);
+}
+
 .pf-vertical-rhythm h1 {
   @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h1, $margin-top: $pf-headings-margin-top, $margin-bottom: $pf-typography-margin-bottom);
 }
 
-.h2,
 .pf-vertical-rhythm h2 {
   @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h2, $margin-top: $pf-headings-margin-top, $margin-bottom: $pf-typography-margin-bottom);
 }
 
-.h3,
 .pf-vertical-rhythm h3 {
   @include pf-heading-styles($weight: $pf-font-weight-light, $size: $font-size-h3, $margin-top: $pf-headings-margin-top, $margin-bottom: $pf-typography-margin-bottom);
 }
 
-.h4,
 .pf-vertical-rhythm h4 {
   @include pf-heading-styles($weight: $pf-font-weight-semi-bold, $size: $font-size-h4, $margin-top: $pf-headings-margin-top, $margin-bottom: $pf-typography-margin-bottom);
 }
