--- a/source/scss/_pf-variables.scss
+++ b/source/scss/_pf-variables.scss
@@ -262,43 +262,43 @@ $spacers: (
     x: ($spacer-x * 3),
     y: ($spacer-y * 3)
   ),
-  pf-xxxs: (
+  spacer-xxxs: (
     x: $pf-spacer-xxxs,
     y: $pf-spacer-xxxs
   ),
-  pf-xxs: (
+  spacer-xxs: (
     x: $pf-spacer-xxs,
     y: $pf-spacer-xxs
   ),
-  pf-xs: (
+  spacer-xs: (
     x: $pf-spacer-xs,
     y: $pf-spacer-xs
   ),
-  pf-sm: (
+  spacer-sm: (
     x: $pf-spacer-sm,
     y: $pf-spacer-sm
   ),
-  pf-md: (
+  spacer-md: (
     x: $pf-spacer-md,
     y: $pf-spacer-md
   ),
-  pf-lg: (
+  spacer-lg: (
     x: $pf-spacer-lg,
     y: $pf-spacer-lg
   ),
-  pf-xl: (
+  spacer-xl: (
     x: $pf-spacer-xl,
     y: $pf-spacer-xl
   ),
-  pf-xxl: (
+  spacer-xxl: (
     x: $pf-spacer-xxl,
     y: $pf-spacer-xxl
   ),
-  pf-xxxl: (
+  spacer-xxxl: (
     x: $pf-spacer-xxxl,
     y: $pf-spacer-xxxl
   ),
-  pf-xxxxl: (
+  spacer-xxxxl: (
     x: $pf-spacer-xxxxl,
     y: $pf-spacer-xxxxl
   )
