--- a/source/scss/patternfly.scss
+++ b/source/scss/patternfly.scss
@@ -20,6 +20,7 @@ limitations under the License.
 
 // Core: variables and mixins
 @import "pf-colors";
+@import "node_modules/bootstrap/scss/functions";
 @import "pf-functions";
 @import "pf-variables";
 @import "node_modules/bootstrap/scss/variables";
@@ -34,7 +35,7 @@ limitations under the License.
 @import "pf-fonts";
 
 // Core: Reset and dependencies
-@import "node_modules/bootstrap/scss/normalize";
+// @import "node_modules/bootstrap/scss/normalize";
 @import "node_modules/bootstrap/scss/print";
 
 // Basics
@@ -74,7 +75,7 @@ limitations under the License.
 @import "node_modules/bootstrap/scss/progress";
 @import "node_modules/bootstrap/scss/media";
 @import "node_modules/bootstrap/scss/list-group";
-@import "node_modules/bootstrap/scss/responsive-embed";
+// @import "node_modules/bootstrap/scss/responsive-embed";
 @import "node_modules/bootstrap/scss/close";
 @import "pf-view-selector";
 @import "pf-masthead";
